organização de pastas e criação de models

--- a/VideoRentalStore.API/VideoRentalStore.API.csproj
+++ b/VideoRentalStore.API/VideoRentalStore.API.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VideoRentalStore.Core\VideoRentalStore.Core.csproj" />
+    <ProjectReference Include="..\VideoRentalStore.Infrastructure\VideoRentalStore.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
