criação de controllers

--- a/VideoRentalStore.API/VideoRentalStore.API.csproj
+++ b/VideoRentalStore.API/VideoRentalStore.API.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\VideoRentalStore.Core\VideoRentalStore.Core.csproj" />
     <ProjectReference Include="..\VideoRentalStore.Infrastructure\VideoRentalStore.Infrastructure.csproj" />
+    <ProjectReference Include="..\VideoRentalStore.Application\VideoRentalStore.Application.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
